Remove deprecation in BulkVerifier.java